# Human

./: .env.example  .gitignore  DiscordChatExporter.cmd  README.md  pyproject.toml
config/: abbreviations.example.json  background.example.json
scripts/: activity-now.cmd  activity_now.py  anonymize.py  build_cleaned_conversations.py  build_dataset.py  build_eval_split.py  build_fewshot_examples.py  build_style_profile.py  chat-full.cmd  chat-mock.cmd  chat-mtp.cmd  chat.cmd  chat.ps1  discord-exporter.cmd  eval-mock.cmd  eval-qwen.cmd  evaluate_style.py  human-menu.cmd  ingest_discord.py  install-llama-mtp.cmd  install-llama-mtp.ps1  open-reports.cmd  pipeline-rebuild-all.cmd  probe-chat.cmd  probe_chat_quality.py  run_style_eval.py  server-check-mtp.cmd  server-start-fast.cmd  server-start-mtp.cmd  server-start-quality.cmd  server-status.cmd  server-stop.cmd  simulate_social.py  social-sim.cmd  start_llama_server.ps1  start_qwen36_server.ps1
src/: __init__.py  activity_engine.py  anonymizer.py  cleaned_conversations.py  cli.py  conversation_features.py  data_io.py  dataset_builder.py  discord_export.py  example_selector.py  message_splitter.py  model_client.py  output_parser.py  prompt_builder.py  social_engine.py  style_eval.py  style_profile.py
tests/: test_pipeline.py
