[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "human-style-cli"
version = "0.1.0"
description = "Local Discord style assistant pipeline with anonymization and OpenAI-compatible CLI."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
human-style = "src.cli:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
